<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Motivation</string>
    <string name="new_phrase">New Phrase</string>
    <string name="your_name">What is your name?</string>
    <string name="user">User</string>
    <string name="phrase">Phrase</string>
    <string name="save">Save</string>
    <string name="lets_begin">Let\'s get start?</string>
    <string name="phrases_all">All Phrases</string>
    <string name="phrases_motivation">Motivations Phrases</string>
    <string name="phrases_morning">Morning Phrases</string>
    <string name="hello">Hello!</string>
    <string name="validation_mandatory_name">Input your name.</string>
    <string name="ico">Ico</string>
</resources>