<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.UserActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cabin_sketch"
        android:text="@string/lets_begin"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin_sketch"
        android:hint="@string/your_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_purple"
        android:fontFamily="@font/cabin_sketch"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/save" />


</RelativeLayout>